<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/bg1" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/txt1"
        android:textColor="#4379A3"
        android:textSize="30sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_height="293dp"
        android:layout_marginTop="-4dp"
        android:layout_below="@id/textView13"
        android:layout_marginBottom="-514dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="36sp"
            android:text="@string/txt0"
            android:textColor="#0E4169"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="36sp"
            android:text="@string/txt16"
            android:textColor="#0E4169"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="36sp"
            android:text="@string/txt2"
            android:textColor="#FF0E4169"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="36sp"
            android:text="@string/txt3"
            android:textColor="#FF0E4169"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="36sp"
            android:text="@string/txt4"
            android:textColor="#FF0E4169"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="36sp"
            android:text="@string/txt6"
            android:textColor="#FF0E4169"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="36sp"
            android:text="@string/txt8"
            android:textColor="#FF0E4169"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="36sp"
            android:text="@string/txt10"
            android:textColor="#FF0E4169"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@id/linearLayout2"
        android:layout_marginTop="750dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F1ECBA"
            android:text="@string/bt9"
            android:textColor="#4379A3" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F1ECBA"
            android:text="@string/bt10"
            android:textColor="#4379A3" />
    </LinearLayout>

</RelativeLayout>